--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=your_db_name
+DB_USER=your_db_username
+DB_PASSWORD=your_db_password
 LICENSE_SECRET=your_super_secret_key
 PORT=3000
