--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "license-server",
   "version": "1.0.0",
-  "description": "This open-source project provides a basic implementation of a license server designed to generate and validate software licenses",
-  "main": "server.js",
+  "description": "This open-source project provides a basic implementation of a license server designed to generate and validate software licenses.",
+  "main": "server.mjs",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.mjs"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,11 @@
   },
   "homepage": "https://github.com/YuketsuSh/license-server#readme",
   "dependencies": {
+    "dayjs": "^1.10.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4"
   }
 }
